--- a/test.ini
+++ b/test.ini
@@ -12,11 +12,12 @@ port = 5000
 
 
 [app:main]
-use = config:../../src/ckan/test-core.ini
+use = config:../ckan/test-core.ini
 # Here we hard-code the database and a flag to make default tests
 # run fast.
 ckan.plugins = harvest ckan_harvester test_harvester test_harvester2 test_action_harvester
 ckan.harvest.mq.type = redis
+ckan.harvest.timeout = 5
 ckan.legacy_templates = false
 # NB: other test configuration should go in test-core.ini, which is
 #     what the postgres tests use.
